Add password hashing for authentication